--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 			<h2 style="font-size: 22px; color:#b41818; font-family: "serif";"><b>Experiencia</b></h2>
 			<h3 style="font-size: 14px; color:black; font-family: "serif";"><b>Informática - Atención al Cliente. ITESM Campus Chihuahua</b></h3>
 			<h4 style="font-size: 14px; color:black; font-family: "serif";"><i>Chihuahua, Chih. 2014 – 2015</i></h4>
-			<p style="font-size: 12px; font-family: "serif";">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+			<p style="font-size: 12px; font-family: "serif";">Atención a los usuarios, salas de cómputo y mantenimiento de impresoras.
 			</p>
 
 			<h3 style="font-size: 14px; color:black; font-family: "serif";"><b>Desarrollo de Proyectos - Desarrollo de Aplicaciones Móviles. Centro de Investigación y Tecnología Aplicada CITA</b></h3>
 			<h4 style="font-size: 14px; color:black; font-family: "serif";"><i>Chihuahua, Chih. 2015 – presente</i></h4>
-			<p style="font-size: 12px; font-family: "serif";">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+			<p style="font-size: 12px; font-family: "serif";">Desarrollo de diversos proyectos en equipos multidisciplinarios, enfocado a aplicaciones móviles para iOS. 
 			</p>
 
 			<h2 style="font-size: 22px; color:#b41818; font-family: "serif";"><b>Habilidades</b></h2>
